# adventofcode

./: .gitignore  create_day.ps1  pyproject.toml  requirements.txt
2022/01/: problem.py
2022/02/: part001.py
2023/01/: solution.py
src/adventofcode/utils/: utils.py
src/adventofcode/year2022/day01/: problem.py
src/adventofcode/year2022/day02/: part001.py  part002.py
src/adventofcode/year2023/day01/: solution.py
src/adventofcode/year2023/day02/: solution.py
src/adventofcode/year2023/day03/: solution.py
src/adventofcode/year2023/day04/: solution.py
src/adventofcode/year2023/day05/: solution.py
src/adventofcode/year2023/day06/: solution.py
src/adventofcode/year2023/day07/: solution.py
src/adventofcode/year2023/day08/: solution.py
src/adventofcode/year2023/day09/: solution.py
src/adventofcode/year2023/day10/: solution.py
src/adventofcode/year2023/day11/: solution.py
src/adventofcode/year2023/day12/: solution.py
src/adventofcode/year2023/day13/: solution.py
year2022/day02/: part002.py
year2023/day01/: solution.py
year2023/day02/: solution.py
